# qdirstat

./: CMakeLists.txt  Errors.txt  qdirstat.pro  qdirstat.sln
SpikeForQFileInfo/: SpikeForQFileInfo.pro  SpikeForQFileInfo.vcxproj
src/: BreadcrumbNavigator.h  CMakeLists.txt  Cleanup.cpp  DirInfo.h  DirTree.h  FileInfoIterator.h  FileInfoSet.h  IFileInfo.h  IMainWindow.h  Logger.h  MainWindow.cpp  MainWindow.h  OutputWindow.h  Process.cpp  QDSProcess.h  SelectionModel.h  SysUtil.cpp  TreemapTile.cpp  TreemapTile.h  TreemapView.cpp  TreemapView.h  main.cpp  qdirstat.vcxproj  qdirstat.vcxproj.filters  src.pro
